# datatrace

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data-model.md  plan.md  pyproject.toml  quickstart.md  research.md  spec.md  tasks.md
.github/: copilot-instructions.md
.github/agents/: speckit.plan.agent.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json  vibe.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.vibe/skills/speckit-analyze/: SKILL.md
.vibe/skills/speckit-checklist/: SKILL.md
.vibe/skills/speckit-clarify/: SKILL.md
.vibe/skills/speckit-constitution/: SKILL.md
.vibe/skills/speckit-converge/: SKILL.md
.vibe/skills/speckit-implement/: SKILL.md
.vibe/skills/speckit-plan/: SKILL.md
.vibe/skills/speckit-specify/: SKILL.md
.vibe/skills/speckit-tasks/: SKILL.md
.vibe/skills/speckit-taskstoissues/: SKILL.md
contracts/: README.md  api-contract.md  bigquery-contract.md  cli-contract.md  dbt-contract.md  powerbi-contract.md
src/lib/: bigquery_client.py  powerbi_client.py
src/lib/auth/: __init__.py  powerbi.py
src/models/: bigquery.py  data_asset.py  lineage.py  metadata.py  powerbi.py
subdir/src/config/: logging.py  settings.py
subdir/src/core/: repository.py
subdir/src/lib/: exceptions.py  utils.py
subdir/src/models/: classification.py  dbt.py
